--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ renderizada-->
 
     <link rel="stylesheet" href="./styles.css">
 
-    <script src="./main.js"></script>
+    <script src="./javas.js"></script>
     
 </head>
 
